<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.tobianoapps.zeldareference.R" />
        <import type="androidx.navigation.Navigation" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_home_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".games.GamesFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:padding="@dimen/home_logo_padding"
            app:layout_constraintBottom_toTopOf="@+id/bosses_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/triforce"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bosses_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_bossesFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/bosses"
            app:layout_constraintBottom_toTopOf="@+id/characters_button"
            app:layout_constraintEnd_toEndOf="@+id/characters_button"
            app:layout_constraintStart_toStartOf="@+id/characters_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/characters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_charactersFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/characters"
            app:layout_constraintBottom_toTopOf="@+id/dungeons_button"
            app:layout_constraintEnd_toEndOf="@+id/dungeons_button"
            app:layout_constraintStart_toStartOf="@+id/dungeons_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dungeons_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_dungeonsFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/dungeons"
            app:layout_constraintBottom_toTopOf="@+id/games_button"
            app:layout_constraintEnd_toEndOf="@+id/games_button"
            app:layout_constraintStart_toStartOf="@+id/games_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/games_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_gamesFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/games"
            app:layout_constraintBottom_toTopOf="@+id/items_button"
            app:layout_constraintEnd_toEndOf="@+id/items_button"
            app:layout_constraintStart_toStartOf="@+id/items_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/items_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_itemsFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/items"
            app:layout_constraintBottom_toTopOf="@+id/monsters_button"
            app:layout_constraintEnd_toEndOf="@+id/monsters_button"
            app:layout_constraintStart_toStartOf="@+id/monsters_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/monsters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_monsterFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/monsters"
            app:layout_constraintBottom_toTopOf="@+id/places_button"
            app:layout_constraintEnd_toEndOf="@+id/places_button"
            app:layout_constraintStart_toStartOf="@+id/places_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/places_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_button_spacing_vertical"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_placesFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/places"
            app:layout_constraintBottom_toTopOf="@+id/staff_button"
            app:layout_constraintEnd_toEndOf="@+id/staff_button"
            app:layout_constraintStart_toStartOf="@+id/staff_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/staff_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/grey"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(R.id.action_homeFragment_to_staffFragment)}"
            android:padding="@dimen/button_padding"
            android:text="@string/staff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>