<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.tobianoapps.zeldareference.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_bossesFragment"
            app:destination="@id/bosses_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_charactersFragment"
            app:destination="@id/characters_fragment" app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_dungeonsFragment"
            app:destination="@id/dungeons_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_gamesFragment"
            app:destination="@id/games_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_itemsFragment"
            app:destination="@id/items_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_placesFragment"
            app:destination="@id/places_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_staffFragment"
            app:destination="@id/staff_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_monsterFragment"
            app:destination="@id/monster_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/bosses_fragment"
        android:name="com.tobianoapps.zeldareference.bosses.main.BossesFragment"
        android:label="@string/bosses"
        tools:layout="@layout/fragment_bosses">
        <action
            android:id="@+id/action_bossesFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_bossesFragment_to_bossesDetailFragment"
            app:destination="@id/bosses_detail_fragment"
            app:enterAnim="@anim/fragment_transition_scale_up_enter"
            app:exitAnim="@anim/fragment_transition_scale_up_exit"
            app:popEnterAnim="@anim/fragment_transition_scale_down_pop_enter"
            app:popExitAnim="@anim/fragment_transition_scale_down_pop_exit" />
    </fragment>
    <fragment
        android:id="@+id/characters_fragment"
        android:name="com.tobianoapps.zeldareference.characters.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/dungeons_fragment"
        android:name="com.tobianoapps.zeldareference.dungeons.DungeonsFragment"
        android:label="@string/dungeons"
        tools:layout="@layout/fragment_dungeons">
        <action
            android:id="@+id/action_dungeonsFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/games_fragment"
        android:name="com.tobianoapps.zeldareference.games.GamesFragment"
        android:label="@string/games"
        tools:layout="@layout/fragment_games">
        <action
            android:id="@+id/action_gamesFragment_to_homeFragment"
            app:destination="@id/home_fragment" app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_gamesFragment_to_gamesDetailFragment"
            app:destination="@id/games_detail_fragment"
            app:enterAnim="@anim/fragment_transition_scale_up_enter"
            app:exitAnim="@anim/fragment_transition_scale_up_exit"
            app:popEnterAnim="@anim/fragment_transition_scale_down_pop_enter"
            app:popExitAnim="@anim/fragment_transition_scale_down_pop_exit" />
    </fragment>
    <fragment
        android:id="@+id/items_fragment"
        android:name="com.tobianoapps.zeldareference.items.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items">
        <action
            android:id="@+id/action_itemsFragment_to_homeFragment"
            app:destination="@id/home_fragment" app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/places_fragment"
        android:name="com.tobianoapps.zeldareference.places.PlacesFragment"
        android:label="@string/places"
        tools:layout="@layout/fragment_places">
        <action
            android:id="@+id/action_placesFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/staff_fragment"
        android:name="com.tobianoapps.zeldareference.staff.StaffFragment"
        android:label="@string/staff"
        tools:layout="@layout/fragment_staff">
        <action
            android:id="@+id/action_staffFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/monster_fragment"
        android:name="com.tobianoapps.zeldareference.monsters.MonsterFragment"
        android:label="@string/monsters"
        tools:layout="@layout/fragment_monsters">
        <action
            android:id="@+id/action_monsterFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/games_detail_fragment"
        android:name="com.tobianoapps.zeldareference.games.GamesDetailFragment"
        android:label="GamesDetailFragment"
        tools:layout="@layout/fragment_games_detail">
        <action
            android:id="@+id/action_gamesDetailFragment_to_gamesFragment"
            app:destination="@id/games_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <argument
            android:name="data"
            app:argType="com.tobianoapps.zeldareference.api.models.Games$Data" />
    </fragment>
    <fragment
        android:id="@+id/bosses_detail_fragment"
        android:name="com.tobianoapps.zeldareference.bosses.detail.BossesDetailFragment"
        android:label="BossesDetailFragment"
        tools:layout="@layout/fragment_bosses_detail">
        <action
            android:id="@+id/action_bossesDetailFragment_to_bossesFragment"
            app:destination="@id/bosses_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <argument
            android:name="data"
            app:argType="com.tobianoapps.zeldareference.api.models.Bosses$Data" />
    </fragment>
</navigation>